services/downloads-standard/calibre-web-automated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: calibre-web-automated
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
